--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -48,6 +50,7 @@
     "@types/bcryptjs": "^2.4.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.3.1",
     "@types/passport-facebook": "^3.0.2",
     "@types/passport-google-oauth20": "^2.0.13",
