--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,12 +3,12 @@ version: '3.9'
 services:
   db:
     image: postgres:latest
-    container_name: inwork-container
+    container_name: final-container
     restart: unless-stopped
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
-      POSTGRES_DB: inwork
+      POSTGRES_DB: final
     ports:
       - '5434:5432'
     volumes:
